# bchacks4.0

./: .gitignore  .pre-commit-config.yaml  ImageClassificationModel.py  ImageClassificationServer.py  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
administration/: AdministrationServer.py  __init__.py  main.py
administration/api/: Administration.py  Model.py  __init__.py
cavity-service/cavity_service/: CavityModel.py
cavity-service/model/: CavityModel.py  CavityServer.py  main.py
cavity_service/: CavityServer.py  __init__.py  main.py
cavity_service/model/: CavityServer.py  main.py  model.pickle
dentist/: DentistServer.py  __init__.py  main.py
dentist/model/: Cavity.py  Dentist.py  __init__.py
dermatologist/: DermatologistServer.py  __init__.py  main.py
dermatologist/model/: Dermatologist.py  __init__.py  model.pkl
model-administration/api/: Model.py  ModelAdministration.py  main.py
model-administration/images/: skin_cancers.py
model-administration/tests/: test_requests.py
model_administration/: ModelAdministrationServer.py  __init__.py  main.py
model_administration/api/: ModelAdministration.py  main.py
optometrist/: OptometristServer.py  main.py
optometrist/model/: EyeDisease.py  Optometrist.py  __init__.py
physicAIn-android-app/app/: build.gradle
reception/: ReceptionServer.py  __init__.py  main.py
reception/model/: Reception.py  __init__.py
reception_service/: __init__.py  main.py
skin_cancer_service/: SkinCancerServer.py  __init__.py  main.py
tests/: image.py
(+41 files in other folders)
