[tool.poetry]
name = "skin-cancer-service"
version = "0.1.0"
description = "A microservice that diagnoses skin cancer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "skin_cancer_service"}]

[tool.poetry.dependencies]
python = "3.10.8"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
